# Netbox-Integration-for-vSphere

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  domains.md  pyproject.toml  pyrightconfig.json  ruff.toml  skills-lock.json  vision.md
.github/workflows/: ci.yml  release.yml
docs/: SRS.md  architecture.md  domains.md  project-plan.md  standards.md  vision.md
docs/adr/: 001-one-way-sync.md  002-cron-driven-polling.md  003-idempotent-natural-keys.md  004-no-implicit-deletions.md  005-dependency-order-creation.md  006-dry-run-philosophy.md  007-auto-bootstrap-metadata.md  008-stateless-tool-design.md  009-ddd-layered-architecture.md  010-acl-pattern.md  011-protocol-repository-ports.md  012-separate-aggregates.md  013-domain-events.md  014-per-host-storage.md  015-ip-role-decision-matrix.md  016-configurable-vlan-allocation.md  017-credential-resolution.md  018-optional-vault.md  019-pydantic-config.md  020-rich-structlog-logging.md  021-pyright-strict.md  022-ruff-linter.md  023-pytest-vcrpy.md  024-cli-only-interface.md  025-single-vcenter-per-run.md  026-pid-lock-file.md  027-tls-verification-default.md  028-custom-fields.md  029-trunk-based-development.md  030-conventional-commits.md  031-pep621-packaging.md  032-pre-commit-gates.md  033-frozen-dataclasses.md  034-dependency-injection.md  035-five-bounded-contexts.md  036-deployment-agnostic.md  037-fail-fast-strategy.md  038-layered-test-strategy.md  index.md
src/netbox_vsphere_sync/: __init__.py
tests/: conftest.py
(+106 files in other folders)
