[project]
name = "netbox-vsphere-sync"
version = "0.1.0"
description = "One-way synchronisation from VMware vSphere into NetBox"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyvmomi>=8.0",
    "pynetbox>=7.0",
    "hvac>=2.0",
    "click>=8.1",
    "pydantic>=2.0",
    "structlog>=24.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "vcrpy>=6.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pre-commit>=3.8",
]

[project.scripts]
nvs-sync = "netbox_vsphere_sync.cli.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require mock servers or vcrpy)",
    "slow: Tests that take >1s to run",
    "vcr: Tests using recorded HTTP cassettes",
]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
